@@ -4,8 +4,8 @@ import cn.hutool.core.bean.BeanUtil;
 import com.baomidou.mybatisplus.core.conditions.update.*;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.begcode.monolith.domain.Authority;
 import com.begcode.monolith.domain.Department;
-import com.begcode.monolith.domain.User;
 import com.begcode.monolith.repository.DepartmentRepository;
 import com.begcode.monolith.service.dto.DepartmentDTO;
 import com.begcode.monolith.service.mapper.DepartmentMapper;
@@ -62,7 +62,7 @@ public class DepartmentBaseService<R extends DepartmentRepository, E extends Dep
         log.debug("Request to save Department : {}", departmentDTO);
         Department department = departmentMapper.toEntity(departmentDTO);
         clearChildrenCache();
-        this.createOrUpdateAndRelatedRelations(department, Arrays.asList("authorities"));
+        this.createOrUpdateAndRelatedRelations(department, List.of("authorities"));
         return findOne(department.getId()).orElseThrow();
     }
 
@@ -77,7 +77,7 @@ public class DepartmentBaseService<R extends DepartmentRepository, E extends Dep
         log.debug("Request to update Department : {}", departmentDTO);
         Department department = departmentMapper.toEntity(departmentDTO);
         clearChildrenCache();
-        this.createOrUpdateAndRelatedRelations(department, Arrays.asList("authorities"));
+        this.createOrUpdateAndRelatedRelations(department, List.of("authorities"));
         return findOne(department.getId()).orElseThrow();
     }
 
@@ -195,6 +195,41 @@ public class DepartmentBaseService<R extends DepartmentRepository, E extends Dep
 
     protected void clearRelationsCache() {
         this.relationCacheNames.forEach(cacheName -> Optional.ofNullable(cacheManager.getCache(cacheName)).ifPresent(Cache::clear));
+    }
+
+    public void updateRelationships(List<String> otherEntityIds, String relationshipName, List<Long> relatedIds, String operateType) {
+        relatedIds.forEach(id -> {
+            Department byId = getById(id);
+            Binder.bindRelations(byId, relationNames.stream().filter(rel -> !rel.equals(relationshipName)).toArray(String[]::new));
+            if (relationshipName.equals("authorities")) {
+                if (CollectionUtils.isNotEmpty(otherEntityIds)) {
+                    List<Long> ids = otherEntityIds.stream().map(Long::valueOf).toList();
+                    List<Authority> authorityExist = byId.getAuthorities();
+                    if (operateType.equals("add")) {
+                        List<Long> collect = ids
+                            .stream()
+                            .filter(relId -> authorityExist.stream().noneMatch(vp -> vp.getId().equals(relId)))
+                            .toList();
+                        if (CollectionUtils.isNotEmpty(collect)) {
+                            collect.forEach(addId -> authorityExist.add(new Authority().id(addId)));
+                            // 更新
+                            this.createOrUpdateAndRelatedRelations(byId, List.of("authorities"));
+                        }
+                    } else if (operateType.equals("delete")) {
+                        List<Long> collect = ids
+                            .stream()
+                            .filter(relId -> authorityExist.stream().anyMatch(vp -> vp.getId().equals(relId)))
+                            .toList();
+                        if (CollectionUtils.isNotEmpty(collect)) {
+                            List<Authority> authorityAdd = authorityExist.stream().filter(vp -> !collect.contains(vp.getId())).toList();
+                            byId.setAuthorities(authorityAdd);
+                            // 更新
+                            this.createOrUpdateAndRelatedRelations(byId, List.of("authorities"));
+                        }
+                    }
+                }
+            }
+        });
     }
     // jhipster-needle-service-add-method - JHipster will add getters and setters here, do not remove
 
